lis.cppresult.txt
In file included from cur.cpp:13:0:
ruslan/lis.cpp: In copy constructor 'Linkedlist<T>::Linkedlist(const Linkedlist<T>&)':
ruslan/lis.cpp:109:10: error: 'tmp2' was not declared in this scope
   this = tmp2;
          ^
./check.sh: line 24: ./a.out: No such file or directory
